--- a/src/X-Monitor.xcodeproj/xcshareddata/xcschemes/X-Monitor.xcscheme
+++ b/src/X-Monitor.xcodeproj/xcshareddata/xcschemes/X-Monitor.xcscheme
@@ -5,6 +5,24 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;openssl genrsa -out /tmp/private_key.pem 2048&#10;openssl rsa -pubout -in /tmp/private_key.pem -out /tmp/public_key.pem&#10;">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "3551D20B29739DB10088CE7F"
+                     BuildableName = "X-Monitor.app"
+                     BlueprintName = "X-Monitor"
+                     ReferencedContainer = "container:X-Monitor.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <PostActions>
          <ExecutionAction
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
